# graphql-strawberry-python

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
core/: models.py  schema.py  types.py
core/migrations/: 0001_initial.py
graphqlstudio/: asgi.py  settings.py  urls.py  wsgi.py
